<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_water_entry"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:textColor="@color/black" />
    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_e_g_01_12_2024"
        android:inputType="date"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />
    <EditText
        android:id="@+id/etQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/water_amount_e_g_2_liters"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes_optional"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_entry"
        android:backgroundTint="@color/teal_700"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp"  />


</LinearLayout>
